--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,13 +1,15 @@
 server {
 
-    listen 80;
-    listen [::]:80;
+    listen 443;
+    listen [::]:443;
+    
+    #Set ssl certificate
+    ssl_certificate /etc/ssl/nginx.crt;
+    ssl_certificate_key /etc/ssl/nginx.key;
 
-    # include /etc/nginx/sites-available/*;
-    # include /etc/nginx/sites-enabled/*;
-
+    server_name $(DOMAIN_NAME);
+    
     # Define root directory
-    server_name localhost;
     
     root /var/www/;
     index index.html;
@@ -15,6 +17,4 @@ server {
     location /wagraton {
         index index2.html;
 	}
-
-
-}
+}   
