--- a/srcs/.env
+++ b/srcs/.env
@@ -1,1 +1,19 @@
-DOMAIN_NAME=localhost
+DOMAIN_NAME=fagiusep.42.fr
+WP_TITLE=Inception
+
+WP_ADMIN_USR=fagiusep
+WP_ADMIN_PWD=strongpassword
+WP_ADMIN_EMAIL=fagiusep@student.42sp.org.br
+
+WP_USR=me
+WP_PWD=myself
+WP_EMAIL=me@mine.com
+
+MARIADB_ROOT_HOST=mariadb
+MARIADB_ROOT_PASSWORD=strongpassword
+MARIADB_DATABASE=wp
+MARIADB_USER=wordpress
+MARIADB_PASSWORD=strongpassword
+
+MARIADB_HOST_VOLUME_PATH=/home/fagiusep/data/db/
+WORDPRESS_HOST_VOLUME_PATH=/home/fagiusep/data/wp/
