--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,12 +2,24 @@ version: '3'
 
 services:
 
+  redis:
+    build:
+      context: ./bonus/redis
+      dockerfile: Dockerfile
+    container_name: redis
+    image: redis
+    depends_on:
+      - wordpress
+    networks:
+      - inception
+    restart: always
+
   mariadb:
     build:
       context: ./requirements/mariadb
       dockerfile: Dockerfile
     container_name: mariadb
-    image: mariadb:1.0
+    image: mariadb
     environment:
       MARIADB_ROOT_HOST: ${MARIADB_ROOT_HOST}
       MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD} 
@@ -25,7 +37,7 @@ services:
       context: ./requirements/nginx
       dockerfile: Dockerfile
     container_name: nginx
-    image: nginx:1.0
+    image: nginx
     ports:
       - "443:443"
     depends_on:
@@ -41,7 +53,7 @@ services:
       context: ./requirements/wordpress
       dockerfile: Dockerfile
     container_name: wordpress
-    image: wordpress:1.0
+    image: wordpress
     environment:
       MARIADB_ROOT_HOST: ${MARIADB_ROOT_HOST}
       MARIADB_DATABASE: ${MARIADB_DATABASE}
@@ -62,18 +74,6 @@ services:
     networks:
       - inception
     restart: always
-
-  redis:
-    build:
-      context: ./bonus/redis
-      dockerfile: Dockerfile
-    container_name: redis
-    image: redis:1.0
-    networks:
-      - inception
-    restart: always
-    depends_on:
-      - wordpress
 
 volumes:
   mariadb-volume:
