bonus directory inside requirements directory

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   redis:
     build:
-      context: ./bonus/redis
+      context: ./requirements/bonus/redis
       dockerfile: Dockerfile
     container_name: redis
     image: redis:1.0
